--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,5 +1,9 @@
 <ion-view view-title="note">
   <ion-content>
-    <h1>Note</h1>
+    <h3>Note Title</h3>
+    <form>
+      <textarea rows="4" cols="50"></textarea>
+    </form>
+    <button id="save-note">save note</button>
   </ion-content>
 </ion-view>
