working on save button

--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -2,8 +2,8 @@
   <ion-content>
     <h3>Note Title</h3>
     <form>
-      <textarea rows="4" cols="50"></textarea>
+      <textarea rows="4" cols="50" id="noteContent"></textarea>
     </form>
-    <button id="save-note">save note</button>
+    <button id="save-note" ng-click="SaveNote()">save note</button>
   </ion-content>
 </ion-view>
