--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,6 +1,6 @@
 <ion-view view-title="note">
   <ion-content>
-    <h3>Note Title</h3>
+    <h3>{{note.title}}</h3>
     <form>
       <textarea rows="20" cols="50" id="noteContent" placeholder="Text Area" ng-model="noteText"></textarea>
     </form>
