--- a/www/templates/noteList.html
+++ b/www/templates/noteList.html
@@ -1,5 +1,8 @@
-<ion-view view-title="noteList">
+<ion-view view-title="Notes">
   <ion-content>
+  <div class="row">
+    <button class="button button-clear" ng-click="addNote()">+</button>
+  </div>
     <ion-list>
       <ion-item ng-repeat="(key, value) in noteListObject" href="#/app/note/{{key}}">
         {{value.title}}
