--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,9 +1,9 @@
 <ion-view view-title="note">
   <ion-content>
-    <h3>{{note.title}}</h3>
     <form>
-      <textarea rows="20" cols="50" id="noteContent" placeholder="Text Area" ng-model="noteText"></textarea>
+      <textarea id="noteTitle">{{note.title}}</textarea>
+      <textarea rows="20" cols="50" id="noteContent" placeholder="Text Area">{{note.content}}</textarea>
+      <button id="save-note" ng-click="SaveNote()">save note</button>
     </form>
-    <button id="save-note" ng-click="SaveNote(noteText)">save note</button>
   </ion-content>
 </ion-view>
