update note content works via . on text area

--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,9 +1,10 @@
 <ion-view view-title="note">
-  <ion-content>
+  <ion-content ng-controller="noteCtrl">
     <h3>{{note.title}}</h3>
     <form>
-      <textarea rows="20" cols="50" id="noteContent" placeholder="Text Area" ng-model="noteText"></textarea>
+      <textarea rows="20" cols="50" id="noteContent" ng-model="noteText" ng-keypress="saveContent()"></textarea>
     </form>
-    <button id="save-note" ng-click="SaveNote(noteText)">save note</button>
+    <textarea ng-model="testTextArea">{{testTextArea}}</textarea>
+    <!-- <button id="save-note" ng-click="SaveNoteContent(noteText)">save note</button> -->
   </ion-content>
 </ion-view>
