--- a/www/templates/noteList.html
+++ b/www/templates/noteList.html
@@ -2,10 +2,14 @@
   <ion-content>
   <div class="row">
     <button class="button button-clear" ng-click="addNote()">+</button>
+    <!-- <button class="button button-clear">Delete Notes</button> -->
+    <a class="button button-clear" href="#/app/deleteNotes">Delete Notes</a>
   </div>
     <ion-list>
       <ion-item ng-repeat="(key, value) in noteListObject" href="#/app/note/{{key}}">
         {{value.title}}
+        <!-- <button class="button button-clear" ng-click="deleteNote()" id="{{key}}"> Delete </button> -->
+
       </ion-content>
       </ion-item>
     </ion-list>
