--- a/www/templates/deleteNotes.html
+++ b/www/templates/deleteNotes.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Notes">
-  <ion-content>
+  <ion-content class='has-header'>
 
     <ion-list>
+    <!--deleted href on items below, so that you can click 'dlete' without changing view state. -->
       <ion-item ng-repeat="(key, value) in noteListObject">
         {{value.title}}
         <button class="button button-clear" ng-click="deleteNote()" id="{{key}}"> Delete </button>
