--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,10 +1,9 @@
 <ion-view view-title="note">
-  <ion-content ng-controller="noteCtrl">
+  <ion-content class="has-header" ng-controller="noteCtrl">
     <h3>{{note.title}}</h3>
     <form>
-      <textarea rows="20" cols="50" id="noteContent" ng-model="noteText" ng-keypress="saveContent()"></textarea>
+      <textarea rows="10" cols="50" id="noteContent" ng-model="noteText" ng-keypress="saveContent()"></textarea>
     </form>
     <textarea ng-model="testTextArea">{{testTextArea}}</textarea>
-    <!-- <button id="save-note" ng-click="SaveNoteContent(noteText)">save note</button> -->
   </ion-content>
 </ion-view>
