styling in progress

--- a/www/templates/noteList.html
+++ b/www/templates/noteList.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Notes">
+<ion-view view-title="Jotter">
   <ion-content class='has-header'>
   <div class="row">
     <button class="button button-clear" ng-click="addNote()">+</button>
