--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,27 @@
 /* Empty. Add your own CSS if you like */
+#noteContent {
+  padding: 10px 20px 0 20px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  border-top: 1px dotted gray;
+  border-bottom: 1px dotted gray;
+  resize: none;
+  line-height: 1.4em;
+  width: 100%;
+  min-height: 250px;
+}
+
+.noteTitle {
+  color: white;
+  margin: 0;
+  padding: 10px 0 10px 0;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  background-color: #009BCF;
+}
+
+.title-center {
+  color: #009BCF;
+  font-weight: 700;
+}
