--- a/www/templates/note.html
+++ b/www/templates/note.html
@@ -1,9 +1,8 @@
-<ion-view view-title="note">
-  <ion-content class="has-header" ng-controller="noteCtrl">
-    <h3>{{note.title}}</h3>
+<ion-view ng-controller="noteCtrl" view-title="{{note.title}}">
+  <ion-content class="has-header">
+    <h3 class="noteTitle">{{note.title}}</h3>
     <form>
-      <textarea rows="10" cols="50" id="noteContent" ng-model="noteText" ng-keypress="saveContent()"></textarea>
+      <textarea placeholder="Jot your thoughts..." id="noteContent" ng-model="noteText" ng-keypress="saveContent()"></textarea>
     </form>
-    <textarea ng-model="testTextArea">{{testTextArea}}</textarea>
   </ion-content>
 </ion-view>
