--- a/www/templates/noteList.html
+++ b/www/templates/noteList.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Notes">
+<ion-view cache-view="false" view-title="Notes" >
   <ion-content class='has-header'>
   <div class="row">
     <button class="button button-clear" ng-click="addNote()">+</button>
@@ -6,7 +6,14 @@
   </div>
     <ion-list>
       <ion-item ng-repeat="(key, value) in noteListObject" href="#/app/note/{{key}}" placeholder="Untitled" ng-model="noteText"> <!-- saves unique note id to be stored in $stateParams as noteListid -->
+
+      {{value.title}}
+        <!-- <div ng-if="value.title === '' ">
+          Watchamacallit
+        </div>
+        <div ng-if="value.title !== '' ">
         {{value.title}}
+        </div> -->
       </ion-content>
       </ion-item>
     </ion-list>
