--- a/www/templates/noteList.html
+++ b/www/templates/noteList.html
@@ -1,4 +1,5 @@
 <ion-view cache-view="false" view-title="Notes" >
+<!-- cache-view='false' above tells the notelist controller to reload when you hit the 'back' button from the note view -->
   <ion-content class='has-header'>
   <div class="row">
     <button class="button button-clear" ng-click="addNote()">+</button>
